# algorythms-and-data-structures

./: .gitignore  README.md  labs.txt
labs/lab1/: CMakeLists.txt  Makefile  task.txt
labs/lab1/src/: main.cpp  sandbox.cpp
labs/lab1/src/lib/: Args.h  String.h  StringWideFormatWriter.h  StringWriter.h  Vector.h  WideStringFormatterWriter.h  WordCallbackReader.h
labs/lab1/test/lib/: VectorTest.cpp
labs/lab2/: CMakeLists.txt  task.txt
labs/lab2/src/: main.cpp
labs/lab2/src/lib/: KeyWord.h  PascalSeparator.h  PascalSyntaxAnalyzer.h  Stack.h  State.h
labs/lab3/: CMakeLists.txt  task.txt
labs/lab3/src/: main.cpp
labs/lab3/src/lib/: SquareMatrix.h  WeightedGraph.h  graph_calculator.cpp  graph_calculator.h  graph_utils.h
labs/lab3/test/unit/lib/: WeightedGraphTest.cpp  graph_utils_test.cpp
labs/lab4/: CMakeLists.txt  task.txt
labs/lab4/src/: main.cpp
labs/lab4/src/lib/: WeightedGraph.h
labs/lab4/test/unit/: catch_main.cpp
labs/lab4/test/unit/lib/: WeightedGraphTest.cpp
labs/lab_02_24/: CMakeLists.txt  algorythm.md  task.txt
labs/lab_02_24/src/: main.cpp
labs/lab_02_24/src/WordCallbackReader/: WordCallbackReader.cpp  WordCallbackReader.h
